# migrasiquel

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/: settings.local.json
docs/: csv-import-examples.md  csv-import-implementation.md
src/: cli.rs  dump.rs  import.rs  main.rs  migrate.rs  restore.rs
src/engine/: dialect.rs  mod.rs  mysql.rs  postgres.rs  value.rs
src/util/: mod.rs  sql_escape.rs
src/util/dialects/: mod.rs  mysql.rs  postgres.rs
